--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p class="connect">Connect with me on</p>
     <div class="links">
     <a href="https://www.instagram.com/tanishka.exists/"><img class="logo" src="insta.png">Instagram</a>
-    <a href="index.html"><img class="logo"src="linkedin.png">Linkedin</a>
+    <a href="index.html"><img class="linkedin"src="linkedin.png">Linkedin</a>
     <a href="https://wa.me/+918171112100"><img class="logo" src="whatsapp.png">Whatsapp</a>
     <a href="mailto: itanishkasaxena@gmail.com"><img class="gmail" src="email.png">Gmail</a>
     <a href="https://github.com/tanishkasaxena"><img class="github" src="github.png">Github</a>
