--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div class="horizontal">
-    <img class="face" src="Picsart_23-02-21_00-14-42-256.png">
+    <img class="face" src="IMG_20230426_172622.jpg">
     <p class="name"><b>Tejas Gupta</b><br><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ea maiores unde non facere, possimus doloribus deleniti eos excepturi saepe amet libero voluptatibus ipsum eveniet voluptates?</p>
 </div>
     <p class="connect">Connect with me on</p>
