--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <div class="horizontal">
     <img class="face" src="IMG_20230426_172622.jpg">
-    <p class="name"><b>Tanishka Saxena</b><br><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ea maiores unde non facere, possimus doloribus deleniti eos excepturi saepe amet libero voluptatibus ipsum eveniet voluptates?</p>
+    <p class="name"><b>Tanishka Saxena</b><br><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ea maiores unde non facere, possimus doloribus!</p>
 </div>
     <p class="connect">Connect with me on</p>
     <div class="links">
