--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" href="IMG_20230426_172622.jpg" type="image/icon type">
     <link rel="stylesheet" href="style.css">
     <title>Socialmedia Handles</title>
 </head>
