--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="icon" href="IMG_20230426_172622.jpg" type="image/icon type">
     <link rel="stylesheet" href="style.css">
-    <title>Socialmedia Handles</title>
+    <title>Tanishka | Links</title>
 </head>
 <body>
     <div class="horizontal">
