--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Tanishka | Links</title>
 </head>
 <body>
+    <div id="particles-js"></div>
+
+<!-- particles.js lib - https://github.com/VincentGarreau/particles.js --> 
+<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+
+<div class="container">
+    
     <div class="horizontal">
     <img class="face" src="IMG_20230426_172622.jpg">
     <p class="name"><b>Tanishka Saxena</b><br><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ea maiores unde non facere, possimus doloribus!</p>
@@ -22,6 +29,7 @@
     </div>
 <hr/>
 <div class="sign">Tanishka</div>
+    </div>
 <script src="index.js"></script>
 </body>
 </html>
