--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     <div class="horizontal">
     <img class="face" src="IMG_20230426_172622.jpg">
-    <p class="name"><b>Tanishka Saxena</b><br><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ea maiores unde non facere, possimus doloribus!</p>
+    <p class="name">𝐓𝐚𝐧𝐢𝐬𝐡𝐤𝐚 𝐒𝐚𝐱𝐞𝐧𝐚<br><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ea maiores unde non facere, possimus doloribus!</p>
 </div>
     <p class="connect">Connect with me on</p>
     <div class="links">
