--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="container">
     
     <div class="horizontal">
-    <img class="face" src="IMG_20230426_172622.jpg">
+    <img class="face" src="IMG-20230430-WA0029.jpg">
     <p class="name">𝐓𝐚𝐧𝐢𝐬𝐡𝐤𝐚 𝐒𝐚𝐱𝐞𝐧𝐚<br><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ea maiores unde non facere, possimus doloribus!</p>
 </div>
     <p class="connect">Connect with me on</p>
