--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" href="IMG_20230426_172622.jpg" type="image/icon type">
+    <link rel="icon" href="IMG-20230430-WA0029.jpg" type="image/icon type">
     <link rel="stylesheet" href="style.css">
     <title>Tanishka | Links</title>
 </head>
