--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     <div class="horizontal">
     <img class="face" src="IMG-20230430-WA0029.jpg">
-    <p class="name">𝐓𝐚𝐧𝐢𝐬𝐡𝐤𝐚 𝐒𝐚𝐱𝐞𝐧𝐚<br><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ea maiores unde non facere, possimus doloribus!</p>
+    <p class="name">𝐓𝐚𝐧𝐢𝐬𝐡𝐤𝐚 𝐒𝐚𝐱𝐞𝐧𝐚<br><br>You are on Earth to Unearth what on Earth you are.</p>
 </div>
     <p class="connect">Connect with me on</p>
     <div class="links">
@@ -28,7 +28,7 @@
     <a href="https://github.com/tanishkasaxena"><img class="github" src="github.png">Github</a>
     </div>
 <hr/>
-<div class="sign">Tanishka</div>
+<div class="sign">You are on Earth to Unearth what on Earth you are.</div>
     </div>
 <script src="index.js"></script>
 </body>
