--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <a href="https://github.com/tanishkasaxena"><img class="github" src="github.png">Github</a>
     </div>
 <hr/>
-<div class="sign">Tanishka</div>
+<div class="sign"><img src="IMG_20230502_172007%20(1).png" id="sign"></div>
     </div>
 <script src="index.js"></script>
 </body>
