--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
      <div class="starlink">
         
-    <marquee direction="left"><img src="images\iss.png" height="5px" class="iss">
+    <marquee direction="left"><img src="iss.png" height="12px" class="iss">
     
       </marquee>
 
