--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <p class="connect">Connect with me on</p>
     <div class="links">
     <a href="https://www.instagram.com/tanishka.exists/"><img class="logo" src="insta.png">Instagram</a>
-    <a href="https://www.notion.so/Tanishka-s-Home-35c889bd14e84fd89b1976c21ab27ee9"><img class="linkedin" src="notion.png">Notion</a>
+    <!--<a href="https://www.notion.so/Tanishka-s-Home-35c889bd14e84fd89b1976c21ab27ee9"><img class="linkedin" src="notion.png">Notion</a>-->
     <a href="https://www.quora.com/profile/Tanishka-Saxena-28?ch=10&oid=1518711438&share=abcdf089&srid=hGQw8j&target_type=user"><img class="github" src="quora.png">Quora</a>
     <a href="https://www.linkedin.com/in/tanishka-s-35b863251"><img class="linkedin"src="linkedin.png">Linkedin</a>
     <a href="https://twitter.com/tan_exists?t=cPAiqwB7maOqywAVIbHe_g&s=08"><img class="linkedin" src="twitter.png">Twitter</a>
