--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <a href="https://www.linkedin.com/in/tanishka-s-35b863251"><img class="logo"src="linkedin.png">Linkedin</a>
     <a href="https://twitter.com/tan_exists?t=cPAiqwB7maOqywAVIbHe_g&s=08"><img class="logo" src="twitter.png">Twitter</a>
     <a href="mailto: itanishkasaxena@gmail.com"><img class="logo" src="email.png">Gmail</a>
-    <a href="https://github.com/tanishkasaxena"><img class="logo" src="github.png">Github</a>
+    <a href="https://github.com/multiverseweb"><img class="logo" src="github.png">Github</a>
     </div>
 <hr/>
 <div class="sign"><img src="IMG_20230502_172007%20(1).png" id="sign"></div>
