--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="links">
     <a href="https://www.linkedin.com/in/tanishka-s-35b863251"><img class="logo"src="linkedin.png">Linkedin</a>
     <a href="https://github.com/tanishkasaxena"><img class="logo" src="github.png">Github</a>
-    <a href="https://twitter.com/tan_exists?t=cPAiqwB7maOqywAVIbHe_g&s=08"><img class="logo" src="x.png">Twitter</a>
+    <a href="https://twitter.com/tan_exists?t=cPAiqwB7maOqywAVIbHe_g&s=08"><img class="logo" src="x.png">X</a>
     <a href="https://www.instagram.com/tanishka.exists/"><img class="logo" src="insta.png">Instagram</a>
     <!--<a href="https://www.notion.so/Tanishka-s-Home-35c889bd14e84fd89b1976c21ab27ee9"><img class="linkedin" src="notion.png">Notion</a>-->
     <a href="https://www.quora.com/profile/Tanishka-Saxena-28?ch=10&oid=1518711438&share=abcdf089&srid=hGQw8j&target_type=user"><img class="logo" src="quora.png">Quora</a>
