--- a/index.html
+++ b/index.html
@@ -1,52 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="icon" href="IMG-20230430-WA0029.jpg" type="image/icon type">
     <link rel="stylesheet" href="style.css">
     <title>Tanishka | Links</title>
 </head>
+
 <body>
     <div id="particles-js"></div>
 
-<!-- particles.js lib - https://github.com/VincentGarreau/particles.js --> 
-<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-<div class="container">
+    <!-- particles.js lib - https://github.com/VincentGarreau/particles.js -->
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <div class="container">
         <img src="IMG-20230430-WA0029.jpg" class="face">
         <p>𝐓𝐚𝐧𝐢𝐬𝐡𝐤𝐚 𝐒𝐚𝐱𝐞𝐧𝐚</p>
         <p class="small">"You are on Earth to Unearth what on Earth you are."</p>
         <br>
         <a href="mailto: itanishkasaxena@gmail.com"><img src="envelope.png" class="mail"></a>
+        <p class="connect">Connect with me on</p>
+
+        <div class="links">
+            <div class="link"><img src="https://freelogopng.com/images/all_img/1656994883linkedin-logo-transparent.png"
+                    alt="" class="icon"><a href="https://www.linkedin.com/in/tanishka-s-35b863251"
+                    class="linka">Linkedin</a></div>
+            <div class="link"><img src="https://cdn4.iconfinder.com/data/icons/iconsimple-logotypes/512/github-512.png"
+                    alt="" class="icon"><a href="https://github.com/tanishkasaxena" class="linka">Github</a></div>
+            <div class="link"><img src="x.png" alt="" class="icon"><a
+                    href="https://twitter.com/tan_exists?t=cPAiqwB7maOqywAVIbHe_g&s=08" class="linka">X</a></div>
+            <div class="link"><img src="insta.png" alt="" class="icon"><a
+                    href="https://www.instagram.com/tanishka.exists/" class="linka">Instagram</a></div>
+            <div class="link"><img src="quora.png" alt="" class="icon"><a
+                    href="https://www.quora.com/profile/Tanishka-Saxena-28?ch=10&oid=1518711438&share=abcdf089&srid=hGQw8j&target_type=user"
+                    class="linka">Quora</a></div>
+        </div>
+        <div class="end">
+            <hr>
+            <p>
+                <a href="#">Tanishka</a>
+            </p>
+        </div>
     </div>
 
-    <p class="connect">Connect with me on</p>
 
-    <div class="links">
-        <div class="link"><img src="https://cdn4.iconfinder.com/data/icons/iconsimple-logotypes/512/github-512.png"
-                alt="" class="icon"><a href="https://github.com/tanishkasaxena" class="linka">Github</a></div>
-        <div class="link"><img src="https://freelogopng.com/images/all_img/1656994883linkedin-logo-transparent.png" alt="" class="icon"><a href="https://www.linkedin.com/in/tanishka-s-35b863251"
-                class="linka">Linkedin</a></div>
-        <div class="link"><img src="insta.png" alt="" class="icon"><a href="https://www.instagram.com/tanishka.exists/"
-                class="linka">Instagram</a></div>
-        <div class="link"><img
-                src="x.png" alt=""
-                class="icon"><a href="https://twitter.com/tan_exists?t=cPAiqwB7maOqywAVIbHe_g&s=08" class="linka">X</a></div>
-        <div class="link"><img
-                src="quora.png"
-                alt="" class="icon"><a href="https://www.quora.com/profile/Tanishka-Saxena-28?ch=10&oid=1518711438&share=abcdf089&srid=hGQw8j&target_type=user" class="linka">Quora</a></div>
-    </div>
-    <div class="end">
 
-        <hr>
-        <p>
-            <a href="#">Tanishka</a>
-        </p>
+    <div class="starlink">
+        <marquee direction="left"><img src="iss.png" height="12px" class="iss"></marquee>
     </div>
-     <div class="starlink">
-    <marquee direction="left"><img src="iss.png" height="12px" class="iss"></marquee>
-      </div>
-<script src="index.js"></script>
+    <script src="index.js"></script>
 </body>
+
 </html>
-
-
-
