--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     alt="" class="icon"><a href="https://www.linkedin.com/in/tanishka-s-35b863251"
                     class="linka">Linkedin</a></div>
             <div class="link"><img src="https://cdn4.iconfinder.com/data/icons/iconsimple-logotypes/512/github-512.png"
-                    alt="" class="icon"><a href="https://github.com/tanishkasaxena" class="linka">Github</a></div>
+                    alt="" class="icon"><a href="https://github.com/tanishkasaxena" class="linka">GitHub</a></div>
             <div class="link"><img src="x.png" alt="" class="icon"><a
                     href="https://twitter.com/tan_exists?t=cPAiqwB7maOqywAVIbHe_g&s=08" class="linka">X</a></div>
             <div class="link"><img src="insta.png" alt="" class="icon"><a
