--- a/index.html
+++ b/index.html
@@ -2,50 +2,48 @@
 <html lang="en">
 
 <head>
-    <link rel="icon" href="IMG-20230430-WA0029.jpg" type="image/icon type">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" class="favicon" type="image/x-icon" href="favicon.png">
+    <title>Tanishka | Linktree</title>
     <link rel="stylesheet" href="style.css">
-    <title>Tanishka | Links</title>
 </head>
 
 <body>
     <div id="particles-js"></div>
-
     <!-- particles.js lib - https://github.com/VincentGarreau/particles.js -->
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+
     <div class="container">
-        <img src="IMG-20230430-WA0029.jpg" class="face">
-        <p>𝐓𝐚𝐧𝐢𝐬𝐡𝐤𝐚 𝐒𝐚𝐱𝐞𝐧𝐚</p>
-        <p class="small">"You are on Earth to Unearth what on Earth you are."</p>
-        <br>
-        <a href="mailto: itanishkasaxena@gmail.com"><img src="envelope.png" class="mail"></a>
-        <p class="connect">Connect with me on</p>
+        <div class="intro">
+            <img src="https://media.licdn.com/dms/image/v2/D5603AQGddL1IEwGzGw/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1705526092446?e=1729123200&v=beta&t=TMusMYYMp76c-EhHtonAW5TPL_FRfFdtgC3anFJS7bI"
+                class="face">
+            <p>𝐓𝐚𝐧𝐢𝐬𝐡𝐤𝐚 𝐒𝐚𝐱𝐞𝐧𝐚</p>
+            <p class="small">"You are on Earth to Unearth what on Earth you are."</p>
+            <br>
+            <a href="https://mailto:tanishkasaxena13@gmail.com"><img src="envelope.png" class="mail"></a>
+            <p class="category">Let's connect!</p>
+        </div>
 
         <div class="links">
             <div class="link"><img src="https://freelogopng.com/images/all_img/1656994883linkedin-logo-transparent.png"
-                    alt="" class="icon"><a href="https://www.linkedin.com/in/tanishka-s-35b863251"
+                    alt="" class="icon"><a
+                    href="https://www.linkedin.com/in/tanishka-saxena-35b863251/"
                     class="linka">Linkedin</a></div>
-            <div class="link"><img src="https://cdn4.iconfinder.com/data/icons/iconsimple-logotypes/512/github-512.png"
-                    alt="" class="icon"><a href="https://github.com/tanishkasaxena" class="linka">GitHub</a></div>
-            <div class="link"><img src="x.png" alt="" class="icon"><a
-                    href="https://twitter.com/tan_exists?t=cPAiqwB7maOqywAVIbHe_g&s=08" class="linka">X</a></div>
-            <div class="link"><img src="insta.png" alt="" class="icon"><a
-                    href="https://www.instagram.com/tanishka.exists/" class="linka">Instagram</a></div>
-            <div class="link"><img src="quora.png" alt="" class="icon"><a
-                    href="https://www.quora.com/profile/Tanishka-Saxena-28?ch=10&oid=1518711438&share=abcdf089&srid=hGQw8j&target_type=user"
-                    class="linka">Quora</a></div>
+            <div class="link"><img src="https://pngimg.com/d/github_PNG83.png" alt="" class="icon" id="github"><a
+                    href="https://github.com/tanishkasaxena" class="linka">GitHub</a>
+            </div>
+            <div class="link"><img src="https://upload.wikimedia.org/wikipedia/commons/5/57/X_logo_2023_%28white%29.png"
+                    alt="" class="icon"><a href="https://x.com/tan_exists" class="linka">X</a></div>
+            <div class="link"><img src="https://freelogopng.com/images/all_img/1658586823instagram-logo-transparent.png"
+                    alt="" class="icon"><a href="https://www.instagram.com/tanishka.exists/" class="linka">Instagram</a></div>
+            <div class="link"><img src="https://static-00.iconduck.com/assets.00/quora-icon-495x512-sp3u96sp.png" alt=""
+                    class="icon"><a href="https://www.quora.com/profile/Tanishka-Saxena-28" class="linka">Quora</a></div>
         </div>
         <div class="end">
             <hr>
-            <p>
-                <a href="#">Tanishka</a>
-            </p>
+            <p>Tanishka°</p>
         </div>
-    </div>
-
-
-
-    <div class="starlink">
-        <marquee direction="left"><img src="iss.png" height="12px" class="iss"></marquee>
     </div>
     <script src="index.js"></script>
 </body>
